# duochat

./: README.md  app.jsx  chat.jsx  data.js  duochat.html  explore.jsx  media.jsx  package.json  pnpm-lock.yaml  read.jsx  screens.jsx  styles.css  tailwind.config.js
.github/workflows/: android-release.yml  pages.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/iroh/: mod.rs  space.rs
src/features/chat/: Chat.tsx  Composer.tsx  MessageContent.tsx  refs.ts
src/features/files/: FileViewer.tsx  FilesPanel.tsx
src/features/pages/: PageEditor.tsx  PagesPanel.tsx
src/features/pairing/: Pairing.tsx
src/features/sidebar/: ChannelsPanel.tsx  Sidebar.tsx
src/features/threads/: ThreadsPanel.tsx
src/lib/: events.ts  markdown.ts  store.ts  tauri.ts  types.ts  util.ts
